<resources>
    <string name="app_name">AppDocTruyen</string>


    //login
    <string name="login_textview">Đăng nhập</string>
    <string name="username_edittext">Tên đăng nhập</string>
    <string name="password_edittext">Mật khẩu</string>
    <string name="login_button_text">Đăng nhập</string>
    <string name="reg_button_text">Đăng ký</string>
    <string name="login_Appname">AppDocTruyen.Com</string>

    //Registry
    <string name="registry_textview">Đăng ký</string>
    <string name="username_edittext_reg">Nhập tên người dùng</string>
    <string name="password_edittext_reg">Nhập mật khẩu</string>
    <string name="password_edittext_reg1">Nhập lại mật khẩu</string>
    <string name="reg_button_xong_reg">Xong</string>
    <string name="reg_button_thoat_reg">Quay lại</string>

    //chitiettruyen
    <string name="btn_doctiep">Đọc tiếp</string>
    <string name="comment">Tất cả bình luận</string>
    <string name="enter_cmt">Nhập bình luận</string>
    <string name="list_chapter">DANH SÁCH CHƯƠNG</string>
    <string name="todo">TODO</string>
    <string name="title_danhsachchuong">Danh sách chương</string>
    <string name="noidungtruyen">đây là nội dung của truyện</string>
</resources>